--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </span>
                     Hasła
                 </a>
-                <a href="#czat" class="sidebar-link sidebar-link-with-icon">
+                <a href="#komunikatory" class="sidebar-link sidebar-link-with-icon">
                     <span class="sidebar-icon">
                         <i class="fa fa-comments" aria-hidden="true"></i>
                     </span>
@@ -462,7 +462,7 @@
                             <a href="https://haveibeenpwned.com"><button class="btn btn-primary" type="button">Haveibeenpwned.com</button></a>
                         </p>
                     </div>
-                    <div id="czat">
+                    <div id="komunikatory">
                         <h2 class="content-title">
                             <i class="fa fa-comments" aria-hidden="true"></i> Komunikatory
                         </h2>
