--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="path/to/fav.png">
   <title>Netykieta.org</title>
   <link href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css" rel="stylesheet" />
-  <style>.btn-primary{margin-top:4px;} svg{fill:rgba(0, 0, 0, 0.85);} .dark-mode svg{fill:rgba(255, 255, 255, 0.8);} .w-70{width:70px;}</style>
+  <style>.btn-primary{margin-top:4px;} svg{fill:rgba(0, 0, 0, 0.85);width:5em;} .dark-mode svg{fill:rgba(255, 255, 255, 0.8);} .m-10,.fa-whatsapp{width:5em;} </style>
 </head>
 <body class="with-custom-webkit-scrollbars with-custom-css-scrollbars" data-sidebar-shortcut-enabled="true" data-set-preferred-mode-onload="false">
 <div id="page-wrapper" class="page-wrapper with-navbar with-sidebar with-transitions" data-sidebar-type="default">
@@ -214,7 +214,7 @@
                                                 </div>
                                         </div>
                                         <div class="my-20 card mw-full m-0 p-0 d-flex">
-                                                <div class="m-10 align-self-center"><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="70px" viewBox="0 0 260.000000 260.000000" preserveAspectRatio="xMidYMid meet">
+                                                <div class="m-10 align-self-center"><svg version="1.0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 260.000000 260.000000" preserveAspectRatio="xMidYMid meet">
                                                     <!--
                                                         svg source:
                                                         https://github.com/duckduckgo/duckduckhack.com/blob/master/images/favicons/safari-pinned-tab.svg?short_path=d25ef74
@@ -286,7 +286,7 @@
                         </h2>
                                         <div class="my-20 card mw-full m-0 p-0 d-flex">
                                                 <div class="m-10 align-self-center">
-                                                    <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="70px" viewBox="0 0 260.000000 260.000000" preserveAspectRatio="xMidYMid meet">
+                                                    <svg version="1.0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 260.000000 260.000000" preserveAspectRatio="xMidYMid meet">
                                                     <!--
                                                         svg source:
                                                         https://github.com/duckduckgo/duckduckhack.com/blob/master/images/favicons/safari-pinned-tab.svg?short_path=d25ef74
@@ -508,7 +508,7 @@
                                                 </div>
                                         </div>
                                         <div class="my-20 card mw-full m-0 p-0 d-flex">
-                                                <div class="m-10 align-self-center pl-5 w-70">
+                                                <div class="m-10 align-self-center pl-5">
                                                         <i class="fab fa-whatsapp fa-5x" aria-hidden="true"></i>
                                                 </div>
                                                 <div class="flex-grow-1 d-flex align-items-center">
@@ -580,7 +580,7 @@
                         <p>
                                         <div class="my-20 card mw-full m-0 p-0 d-flex">
                                                 <div class="m-10 align-self-center">
-                                                        <i class="fa fa-apple fa-5x pl-15 w-70" aria-hidden="true"></i>
+                                                        <i class="fa fa-apple fa-5x pl-15" aria-hidden="true"></i>
                                                 </div>
                                                 <div class="flex-grow-1 d-flex align-items-center">
                                                     <div class="p-10">
@@ -594,7 +594,7 @@
                                                 </div>
                                         </div>
                                         <div class="my-20 card mw-full m-0 p-0 d-flex">
-                                                <div class="m-10 align-self-center w-70">
+                                                <div class="m-10 align-self-center">
                                                         <i class="fab fa-android fa-5x" aria-hidden="true"></i>
                                                 </div>
                                                 <div class="flex-grow-1 d-flex align-items-center">
@@ -609,7 +609,7 @@
                                                 </div>
                                         </div>
                                         <div class="my-20 card mw-full m-0 p-0 d-flex">
-                                                <div class="m-10 align-self-center pl-10 pr-5 w-70">
+                                                <div class="m-10 align-self-center pl-10 pr-5">
                                                         <i class="fab fa-microsoft fa-5x" aria-hidden="true"></i>
                                                 </div>
                                                 <div class="flex-grow-1 d-flex align-items-center">
@@ -635,7 +635,7 @@
                             Przy wybieraniu dostawcy email należy zwracać uwagę na to, żeby był to godny zaufania, duży dostawca (aby zabezpieczyć się przed wyciekami danych oraz zapewnić niezawodność). Warto również aby zawartość maili nie była wykorzystywana w celach reklamowych. Można też rozwaźyć szyfrowane skrzynki, jednak często poczta nie jest szyfrowana z drugiej strony, więc nie jest to decydujący element.
                         </p>
                                         <div class="my-20 card mw-full m-0 p-0 d-flex">
-                                                <div class="m-10 align-self-center pl-5 w-70">
+                                                <div class="m-10 align-self-center pl-5">
                                                         <i class="fa fa-lock fa-5x" aria-hidden="true"></i>
                                                 </div>
                                                 <div class="flex-grow-1 d-flex align-items-center">
@@ -654,7 +654,7 @@
                                                 </div>
                                         </div>
                                         <div class="my-20 card mw-full m-0 p-0 d-flex">
-                                                <div class="m-10 align-self-center w-70">
+                                                <div class="m-10 align-self-center">
                                                         <i class="fa fa-road fa-5x" aria-hidden="true"></i>
                                                 </div>
                                                 <div class="flex-grow-1 d-flex align-items-center">
@@ -674,7 +674,7 @@
                                         </div>
                                         <div class="my-20 card mw-full m-0 p-0 d-flex">
                                                 <div class="m-10 align-self-center">
-                                                        <i class="fa fa-cloud fa-4x pl-5 w-70" aria-hidden="true"></i>
+                                                        <i class="fa fa-cloud fa-4x pl-5" aria-hidden="true"></i>
                                                 </div>
                                                 <div class="flex-grow-1 d-flex align-items-center">
                                                     <div class="p-10">
@@ -691,7 +691,7 @@
                                                 </div>
                                         </div>
                                         <div class="my-20 card mw-full m-0 p-0 d-flex">
-                                                <div class="m-10 align-self-center pl-10 pr-5 w-70">
+                                                <div class="m-10 align-self-center pl-10 pr-5">
                                                         <i class="fab fa-microsoft fa-5x" aria-hidden="true"></i>
                                                 </div>
                                                 <div class="flex-grow-1 d-flex align-items-center">
