--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                                                             <span class="badge"><i class="fa fa-lock"></i> Szyfrowane</span>
                                                         </p>
                                                         <p class="m-0 mt-5 text-muted font-size-12">
-                                                            Dostępny tylko na urządzenia Apple, szyfrowany komunikator zawarty w aplikacji Wiadomości. Kiedy dymek jest zielony, oznacza to rozmowę za pomocą sms, a kiedy niebieski, za pomocą iMessage. Dymek zmienia się na niebieski automatycznie kiedy rozmówcy posiadają urządzenia Apple. 
+                                                            Dostępny tylko na urządzenia Apple, szyfrowany komunikator zawarty w aplikacji Wiadomości. Kiedy dymek jest zielony, oznacza to rozmowę za pomocą SMS, a kiedy niebieski, za pomocą iMessage. Dymek zmienia się na niebieski automatycznie kiedy rozmówcy posiadają urządzenia Apple. 
                                                         </p>
                                                         <p class="m-0 mt-4 text-muted font-size-12">Backup wiadomości w iCloud jest szyfrowany. Backup całego urządzenia nie jest, należy wyłączyć backup w iCloud.
                                                         </p>
@@ -728,7 +728,7 @@
                             <i class="fa fa-user-secret" aria-hidden="true"></i> Phishing
                         </h2>
                         <p>
-                            Aby zabezpieczyć się przed wyłudzeniami należy upewniać się kto jest nadawcą maila czy smsa. Szczególnie jeśli mail dotyczy jakiejś nagłej i istotnej sprawy warto zobaczyć cały adres mailowy nadawcy i upewnić się czy np. nie występuje w nim literówka. Nie należy również otwierać załączników i linków od nieznanych nadawców.
+                            Aby zabezpieczyć się przed wyłudzeniami należy upewniać się kto jest nadawcą maila czy SMSa. Szczególnie jeśli mail dotyczy jakiejś nagłej i istotnej sprawy warto zobaczyć cały adres mailowy nadawcy i upewnić się czy np. nie występuje w nim literówka. Nie należy również otwierać załączników i linków od nieznanych nadawców.
                         </p>
                         <p>
                             Należy również bardzo uważać z podawaniem wrażliwych danych gdziekolwiek w internecie. Należy mieć zaufanie do każdej strony gdzie takie dane się podaje. Należy również upewnić się że jest się połączonym za pomocą HTTPS (sygnalizowane przez kłódkę przed adresem strony).
