--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="path/to/fav.png">
   <title>Netykieta.org</title>
   <link href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css" rel="stylesheet" />
-  <style>.btn-primary{margin-top:4px;} svg{fill:rgba(0, 0, 0, 0.85);width:5em;} .dark-mode svg{fill:rgba(255, 255, 255, 0.8);} .m-10,.fa-whatsapp{width:5em;} </style>
+  <style>.btn-primary{margin-top:4px;} svg{fill:rgba(0, 0, 0, 0.85);width:5em;} .dark-mode svg{fill:rgba(255, 255, 255, 0.8);} .m-10{width:5em;} .fa-whatsapp{width:1em;} </style>
 </head>
 <body class="with-custom-webkit-scrollbars with-custom-css-scrollbars" data-sidebar-shortcut-enabled="true" data-set-preferred-mode-onload="false">
 <div id="page-wrapper" class="page-wrapper with-navbar with-sidebar with-transitions" data-sidebar-type="default">
