--- a/index.html
+++ b/index.html
@@ -765,5 +765,6 @@
     </div>
   <script src="https://kit.fontawesome.com/273974bc65.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/js/halfmoon.min.js"></script>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "7b922b35ef5f47a389af1f8d841e86ee"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
