--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <i class="fa fa-home" aria-hidden="true"></i> Wstęp
                         </h2>
                         <p>
-                            Strona ma na celu w prosty sposób podanie sposobów na mądrzejsze i bardziej prywatne korzystanie z internetu. Jest to krótki, praktyczny przewodnik, który skupia się na przedstawieniu różnych podstawowych narzędzi. W razie pytań zapraszam do <a target="_blank" href="https://github.com/konopielko/netykieta.org/discussions">dyskusji na GitHubie</a>.
+                            Strona ma na celu w prosty sposób podanie sposobów na mądrzejsze i bardziej prywatne korzystanie z internetu. Jest to krótki, praktyczny przewodnik, który skupia się na przedstawieniu różnych podstawowych narzędzi. Strona została zrobiona przez dwójkę studentów. W razie pytań zapraszamy do <a target="_blank" href="https://github.com/konopielko/netykieta.org/discussions">dyskusji na GitHubie</a>.
                         </p>
                         <p>
                             Dla uproszczenia gdy mowa o szyfrowaniu to oznacza to szyfrowanie kompleksowe (zazwyczaj end-to-end). <a target="_blank" href="https://pl.wikipedia.org/wiki/Otwarte_oprogramowanie">Open-source</a> oznacza możliwość wglądu w kod programu.
