--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <i class="fa fa-address-card" aria-hidden="true"></i> Profile Reklamowe
                         </h2>
                         <p>
-                            Strony internetowe, które utrzymują się z wyświetlania reklam bardzo często, w celu optymalizacji pokazywanych treści, zbierają wszelkie dane na temat osób, które z nich korzystają. Na podstawie tych danych wyświetlają użytkownikom treści, które algorytm uzna za pasujące do zainteresowań danej osoby, bardzo często wywołujące silne emocje, w celu zachęcenia użytkownika do dłuższego korzystania z serwisu lub zakupienia danego produktu. Wyniki wyszukiwania w Google mogą wyglądać zupełnie inaczej u różnych użytkowników, zależnie od poglądów, wieku, koloru skóry czy płci. Do tego dane zbierane są nie tylko na stronach tych dużych dostawców a również na wszystkich stronach na których np. znajduje sie przycisk "Lubię to!" czy skrypty Google. Według raportu wykonanego przez Cliqz i Ghostery w 2017 roku 77,4% stron internetowych zawiera skrypty śledzące, z czego 60,2% stron zawiera skrypty od Google i 27,1% od Facebooka.
+                            Strony internetowe, które utrzymują się z wyświetlania reklam bardzo często, w celu optymalizacji pokazywanych treści, zbierają wszelkie dane na temat osób, które z nich korzystają. Na podstawie tych danych wyświetlają użytkownikom treści, które algorytm uzna za pasujące do zainteresowań danej osoby, bardzo często wywołujące silne emocje, w celu zachęcenia użytkownika do dłuższego korzystania z serwisu lub zakupienia danego produktu. Wyniki wyszukiwania w Google mogą wyglądać zupełnie inaczej u różnych użytkowników, zależnie od poglądów, wieku, koloru skóry czy płci. Do tego dane zbierane są nie tylko na stronach tych dużych dostawców, a również na wszystkich stronach na których np. znajduje sie przycisk "Lubię to!" czy skrypty Google. Według raportu wykonanego przez Cliqz i Ghostery w 2017 roku 77,4% stron internetowych zawiera skrypty śledzące, z czego 60,2% stron zawiera skrypty od Google i 27,1% od Facebooka.
                         </p>
                         <p>
                             Jeśli posiadamy konto w jednym z tych dużych serwisów warto dostosować ustawienia prywatności, korzystając z ustawień:
@@ -138,7 +138,7 @@
                                                             Wyłączyć <a target="_blank" href="https://adssettings.google.com/authenticated">personalizację reklam</a>.
                                                         </p>
                                                         <p class="m-0 mt-5 text-muted font-size-12">
-                                                            W <a target="_blank" href="https://myactivity.google.com/">historii aktywności</a> wyłączyć Aktywność w internecie i aplikacjach. Następnie usunąć aktywność która już była.
+                                                            W <a target="_blank" href="https://myactivity.google.com/">historii aktywności</a> wyłączyć Aktywność w internecie i aplikacjach. Następnie usunąć wcześniejszą aktywność.
                                                         </p>
                                                         <p class="m-0 mt-5 text-muted font-size-12">
                                                             Jeśli korzysta się z Google Pay to dostosować <a target="_blank" href="https://pay.google.com/gp/w/home/settings">prywatność Google Pay</a>.
@@ -270,7 +270,7 @@
                             Często na stronach występują obce cookies czyli takie, które należą do innej firmy niż ta która prowadzi stronę. Warto je zablokować. Niektóre przeglądarki robią to domyślnie.
                         </p>
                         <p>
-                            Warto również zainstalować wtyczki do przeglądarek blokujące reklamy i inne zawartości nie potrzebne do korzystania z tych stron:
+                            Warto również zainstalować wtyczki do przeglądarek blokujące reklamy i inne, nie potrzebne, zawartości:
                         </p>
                         <p class="mt-0">
                             <a target="_blank" href="https://ublockorigin.com"><button class="btn btn-primary" type="button"><i class="fab fa-firefox-browser" aria-hidden="true"></i> <i class="fa fa-chrome" aria-hidden="true"></i> Ublock Origin</button></a>
@@ -456,7 +456,7 @@
                                                 </div>
                                         </div>
                         <p>
-                            W przypadku menadżerów haseł nie informujących o wyciekach haseł warto zapisać się na stronę o tym informującą:
+                            W przypadku menadżerów haseł nie informujących o wyciekach haseł, warto zapisać się na stronę o tym informującą:
                         </p>
                         <p>
                             <a target="_blank" href="https://haveibeenpwned.com"><button class="btn btn-primary" type="button">Haveibeenpwned.com</button></a>
@@ -575,7 +575,7 @@
                         <p>
                             Warto szyfrować urządzenie. Kiedy urządzenie nie jest zaszyfrowane to potencjalnie każdy kto fizycznie będzie miał dostęp do urządzenia może dostać się do danych (Nawet nie znając hasła do telefonu). Aplikacje często nie są szyfrowane lokalnie, nawet jeśli są szyfrowane w transferze, więc jest to szczególnie istotne w przypadku urządzeń mobilnych, które poruszają się razem z nami.
                         </p>
-                            Szyfrowanie nie polecane w przypadku starszych urządzeń - może ono wpłynąć negatywnie na wydajność. Sugerowany jest również backup przed rozpoczęciem szyfrowania.
+                            Szyfrowanie nie jest polecane w przypadku starszych urządzeń - może ono wpłynąć negatywnie na wydajność. Sugerowany jest również backup przed rozpoczęciem szyfrowania.
                         </p>
                         <p>
                                         <div class="my-20 card mw-full m-0 p-0 d-flex">
