--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                                             <span class="badge"><i class="fa fa-book-open"></i> Open-source</span>
                                                         </p>
                                                         <p class="m-0 mt-5 text-muted font-size-12">
-                                                            Międzyplatformowa przeglądarka tworzona przez organizację non-profit. Jest nastawiona na prywatność i na przejrzystość. Jedna z niewielu przeglądarek na Android umożliwiająca dodawanie wtyczek. Domyślnie blokuje obce cookies. Po instalacji sugerowane jest ustawić "ścisłą prywatność" w ustawieniach przeglądarki.
+                                                            Międzyplatformowa przeglądarka nastawiona na prywatność i na przejrzystość. Domyślnie blokuje obce cookies. Po instalacji sugerowane jest ustawić "ścisłą prywatność" w ustawieniach przeglądarki.
                                                         </p>
                                                         <a target="_blank" href="http://firefox.com"><button class="btn btn-primary btn-sm" type="button">Strona</button></a>
                                                         <a target="_blank" href="https://pl.wikipedia.org/wiki/Firefox"><button class="btn btn-primary btn-sm" type="button">Wikipedia</button></a>
@@ -239,9 +239,9 @@
                                                             <span class="badge"><i class="fa fa-book-open"></i> Open-source</span>
                                                         </p>
                                                         <p class="m-0 mt-5 text-muted font-size-12">
-                                                            Międzyplatformowa przeglądarka tworzona przez organizację non-profit. Jest nastawiona na prywatność i na przejrzystość. Jedna z niewielu przeglądarek na Android umożliwiająca dodawanie wtyczek. Domyślnie blokuje obce cookies. Po instalacji sugerowane jest ustawić "ścisłą prywatność" w ustawieniach przeglądarki.
+                                                            Międzyplatformowa przeglądarka nastawiona na prywatność i na przejrzystość. Jedna z niewielu przeglądarek na Android umożliwiająca dodawanie wtyczek. Domyślnie blokuje obce cookies. Po instalacji sugerowane jest ustawić "ścisłą prywatność" w ustawieniach przeglądarki.
                                                         </p>
-                                                        <a target="_blank" href="http://firefox.com"><button class="btn btn-primary btn-sm" type="button">Strona</button></a>
+                                                        <a target="_blank" href="https://play.google.com/store/apps/details?id=org.mozilla.firefox"><button class="btn btn-primary btn-sm" type="button">Sklep Play</button></a>
                                                         <a target="_blank" href="https://pl.wikipedia.org/wiki/Firefox"><button class="btn btn-primary btn-sm" type="button">Wikipedia</button></a>
                                                     </div>
                                                 </div>
@@ -290,9 +290,10 @@
                                                             <span class="badge"><i class="fa fa-book-open"></i> Open-source</span>
                                                         </p>
                                                         <p class="m-0 mt-5 text-muted font-size-12">
-                                                            Przeglądarka internetowa dostępna tylko na urządzenia mobilne. Posiada wbudowane filtry prywatnościowe i filtry reklam. Domyślnie blokuje obce cookies. W łatwy sposób umożliwia czyszczenie cookies.
+                                                            Przeglądarka posiada wbudowane filtry prywatnościowe i filtry reklam. Domyślnie blokuje obce cookies. W łatwy sposób umożliwia czyszczenie cookies.
                                                         </p>
-                                                        <a target="_blank" href="https://duckduckgo.com/app"><button class="btn btn-primary btn-sm" type="button">Strona</button></a>
+                                                        <a target="_blank" href="https://play.google.com/store/apps/details?id=com.duckduckgo.mobile.android"><button class="btn btn-primary btn-sm" type="button">Sklep Play</button></a>
+                                                        <a target="_blank" href="https://pl.wikipedia.org/wiki/DuckDuckGo#Przeglądarka_internetowa"><button class="btn btn-primary btn-sm" type="button">Wikipedia</button></a>
                                                     </div>
                                                 </div>
                                         </div>
@@ -313,7 +314,7 @@
                                                             Safari
                                                         </p>
                                                         <p class="m-0 mt-5 text-muted font-size-12">
-                                                            Przeglądarka internetowa dostępna obecnie jedynie na urządzenia Apple. Jest to jedyna przeglądarka na iOS umożliwiająca dodawanie wtyczek. W najnowszych wersjach domyślnie blokuje obce cookies.
+                                                            Jedyna przeglądarka na iOS umożliwiająca dodawanie wtyczek. W najnowszych wersjach domyślnie blokuje obce cookies.
                                                         </p>
                                                         <a target="_blank" href="https://pl.wikipedia.org/wiki/Safari_(przeglądarka)"><button class="btn btn-primary btn-sm" type="button">Wikipedia</button></a>
                                                     </div>
@@ -363,9 +364,10 @@
                                                             <span class="badge"><i class="fa fa-book-open"></i> Open-source</span>
                                                         </p>
                                                         <p class="m-0 mt-5 text-muted font-size-12">
-                                                            Przeglądarka internetowa dostępna tylko na urządzenia mobilne. Posiada wbudowane filtry prywatnościowe i filtry reklam. Domyślnie blokuje obce cookies. W łatwy sposób umożliwia czyszczenie cookies.
+                                                            Przeglądarka posiada wbudowane filtry prywatnościowe i filtry reklam. Domyślnie blokuje obce cookies. W łatwy sposób umożliwia czyszczenie cookies.
                                                         </p>
-                                                        <a target="_blank" href="https://duckduckgo.com/app"><button class="btn btn-primary btn-sm" type="button">Strona</button></a>
+                                                        <a target="_blank" href="https://apps.apple.com/app/duckduckgo-privacy-browser/id663592361"><button class="btn btn-primary btn-sm" type="button">App Store</button></a>
+                                                        <a target="_blank" href="https://pl.wikipedia.org/wiki/DuckDuckGo#Przeglądarka_internetowa"><button class="btn btn-primary btn-sm" type="button">Wikipedia</button></a>
                                                     </div>
                                                 </div>
                                         </div>
@@ -388,7 +390,7 @@
                                                             <span class="badge"><i class="fa fa-book-open"></i> Open-source</span>
                                                         </p>
                                                         <p class="m-0 mt-5 text-muted font-size-12">
-                                                            Międzyplatformowa przeglądarka tworzona przez organizację non-profit. Jest nastawiona na prywatność i na przejrzystość. Jedna z niewielu przeglądarek na Android umożliwiająca dodawanie wtyczek. Domyślnie blokuje obce cookies. Po instalacji sugerowane jest ustawić "ścisłą prywatność" w ustawieniach przeglądarki.
+                                                            Międzyplatformowa przeglądarka nastawiona na prywatność i na przejrzystość. Domyślnie blokuje obce cookies. Po instalacji sugerowane jest ustawić "ścisłą prywatność" w ustawieniach przeglądarki.
                                                         </p>
                                                         <a target="_blank" href="http://firefox.com"><button class="btn btn-primary btn-sm" type="button">Strona</button></a>
                                                         <a target="_blank" href="https://pl.wikipedia.org/wiki/Firefox"><button class="btn btn-primary btn-sm" type="button">Wikipedia</button></a>
@@ -405,7 +407,7 @@
                                                             Safari
                                                         </p>
                                                         <p class="m-0 mt-5 text-muted font-size-12">
-                                                            Przeglądarka internetowa dostępna obecnie jedynie na urządzenia Apple. Jest to jedyna przeglądarka na iOS umożliwiająca dodawanie wtyczek. W najnowszych wersjach domyślnie blokuje obce cookies.
+                                                            Jedyna przeglądarka na iOS umożliwiająca dodawanie wtyczek. W najnowszych wersjach domyślnie blokuje obce cookies.
                                                         </p>
                                                         <a target="_blank" href="https://pl.wikipedia.org/wiki/Safari_(przeglądarka)"><button class="btn btn-primary btn-sm" type="button">Wikipedia</button></a>
                                                     </div>
@@ -425,9 +427,6 @@
                         </p>
                         <p class="mt-0">
                             <a target="_blank" href="https://ublockorigin.com"><button class="btn btn-primary" type="button"><i class="fab fa-firefox-browser" aria-hidden="true"></i> <i class="fa fa-chrome" aria-hidden="true"></i> Ublock Origin</button></a>
-                        	<a target="_blank" href="https://privacybadger.org"><button class="btn btn-primary" type="button"><i class="fab fa-firefox-browser" aria-hidden="true"></i> <i class="fa fa-chrome" aria-hidden="true"></i> Privacy Badger</button></a>
-                        </p>
-                       	<p class="mb-20">
                         	<a target="_blank" href="https://adblockpro.app"><button class="btn btn-primary" type="button"><i class="fa fa-safari" aria-hidden="true"></i> Adblock Pro</button></a>
                         </p>
                     </div>
@@ -504,6 +503,7 @@
                                                             Wyszukiwarka internetowa wykorzystująca silnik Google obiecując przy tym utrzymanie prywatności. Często daje bardziej precyzyjne wyniki niż chociażby duckduckgo czy ecosia. Aby wyszukać za jej pomocą na DuckDuckGo należy dodać !s do wyszukiwanej frazy.
                                                         </p>
                                                         <a target="_blank" href="https://startpage.com"><button class="btn btn-primary btn-sm" type="button">Strona</button></a>
+                                                        <a target="_blank" href="https://pl.wikipedia.org/wiki/Startpage.com"><button class="btn btn-primary btn-sm" type="button">Wikipedia</button></a>
                                                     </div>
                                                 </div>
                                         </div>
@@ -575,7 +575,6 @@
                                                             Otwarty program umożliwiający przechowywanie haseł w formie zaszyfrowanego pliku. Standardowa wersja dostępna jest na systemy windows jednak istnieją też wersje na inne systemy. Dobre rozwiązanie do lokalnego przechowywania haseł na komputerze. Najbezpieczniejsze, jednak najmniej wygodne, z przedstawianych rozwiązań
                                                         </p>
                                                         <a target="_blank" href="https://keepass.info"><button class="btn btn-primary btn-sm" type="button">Strona</button></a>
-
                                                         <a target="_blank" href="https://pl.wikipedia.org/wiki/KeePass_Password_Safe"><button class="btn btn-primary btn-sm" type="button">Wikipedia</button></a>
                                                     </div>
                                                 </div>
@@ -611,6 +610,7 @@
                                                             Wbudowany w Firefox menadżer haseł. Aby hasła były szyfrowane należy utworzyć hasło główne. Po utworzeniu konta Firefox hasła są przechowywane w chmurze.
                                                         </p>
                                                         <a target="_blank" href="https://www.mozilla.org/pl/firefox/lockwise/"><button class="btn btn-primary btn-sm" type="button">Strona</button></a>
+                                                        <a target="_blank" href="https://pl.wikipedia.org/wiki/Firefox_Lockwise"><button class="btn btn-primary btn-sm" type="button">Wikipedia</button></a>
                                                     </div>
                                                 </div>
                                         </div>
@@ -796,7 +796,7 @@
                                                             Outlook
                                                         </p>
                                                         <p class="m-0 mt-5 text-muted font-size-12">
-                                                            Email od Microsoft. Można stworzyć 10 aliasów rocznie oraz używać adresów w formie adres+coś@outlook.com (gdzie coś można zastąpić czymkolwiek a adres jest standardowym adresem email)
+                                                            Email od Microsoft. Można stworzyć 10 adresów rocznie oraz używać aliasów w formie adres+coś@outlook.com (gdzie coś można zastąpić czymkolwiek a adres jest standardowym adresem email)
                                                         </p>
                                                         <a target="_blank" href="https://outlook.com"><button class="btn btn-primary btn-sm" type="button">Strona</button></a>
                                                         <a target="_blank" href="https://pl.wikipedia.org/wiki/Outlook.com"><button class="btn btn-primary btn-sm" type="button">Wikipedia</button></a>
@@ -820,7 +820,7 @@
                                                             <span class="badge"><i class="fa fa-lock"></i> Szyfrowane</span>
                                                         </p>
                                                         <p class="m-0 mt-5 text-muted font-size-12">
-                                                            Szyfrowany szwajcarski email. W darmowej wersji można uzyskać alias @pm.me .
+                                                            Szyfrowany szwajcarski email. W darmowej wersji można uzyskać adres @pm.me oraz używać aliasów w formie adres+coś@protonmail.com (gdzie coś można zastąpić czymkolwiek a adres jest standardowym adresem email)
                                                         </p>
                                                         <a target="_blank" href="https://protonmail.com/pl/"><button class="btn btn-primary btn-sm" type="button">Strona</button></a>
                                                         <a target="_blank" href="https://pl.wikipedia.org/wiki/ProtonMail"><button class="btn btn-primary btn-sm" type="button">Wikipedia</button></a>
